--- a/primer-sdk-android/src/main/res/drawable/icon_go_back.xml
+++ b/primer-sdk-android/src/main/res/drawable/icon_go_back.xml
@@ -1,7 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="18"
-        android:viewportHeight="18">
-    <path android:pathData="M17.0156 8.01562V9.98438H4.82812L10.4062 15.6094L9 17.0156L0.984375 9L9 0.984375L10.4062 2.39062L4.82812 8.01562H17.0156Z" android:fillColor="#5F5F5F"/>
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="18"
+    android:viewportHeight="18">
+    <path
+        android:fillColor="#5F5F5F"
+        android:pathData="M17.0156 8.01562V9.98438H4.82812L10.4062 15.6094L9 17.0156L0.984375 9L9 0.984375L10.4062 2.39062L4.82812 8.01562H17.0156Z" />
 </vector>
