--- a/primer-sdk-android/src/main/res/layout/fragment_select_payment_method.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_select_payment_method.xml
@@ -1,35 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
     android:layout_width="match_parent"
-    android:animateLayoutChanges="true"
-    >
+    android:layout_height="match_parent"
+    android:animateLayoutChanges="true">
+
     <io.primer.android.ui.SelectPaymentMethodTitle
         android:id="@+id/primer_sheet_title_layout"
-        android:orientation="horizontal"
-        android:gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal"
         app:layout_constraintStart_toStartOf="parent"
-        >
+        app:layout_constraintTop_toTopOf="parent">
+
         <TextView
             android:id="@+id/primer_sheet_title"
-            style="@style/Primer.Text.Title"
-            />
+            style="@style/Primer.Text.Title" />
     </io.primer.android.ui.SelectPaymentMethodTitle>
 
     <LinearLayout
         android:id="@+id/primer_sheet_payment_methods_list"
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/primer_list_margin"
-        app:layout_constraintTop_toBottomOf="@id/primer_sheet_title_layout"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
-        />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/primer_sheet_title_layout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
