--- a/primer-sdk-android/src/main/res/drawable/list_item_normal.xml
+++ b/primer-sdk-android/src/main/res/drawable/list_item_normal.xml
@@ -8,11 +8,10 @@
     </item>
     <item
         android:bottom="1dp"
-        android:top="-2dp"
         android:left="-2dp"
         android:right="-2dp"
-        >
-        <shape android:shape="rectangle" >
+        android:top="-2dp">
+        <shape android:shape="rectangle">
             <stroke
                 android:width="1dp"
                 android:color="@color/primer_underline_color" />
