--- a/primer-sdk-android/src/main/res/layout/fragment_vaulted_payment_methods.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_vaulted_payment_methods.xml
@@ -1,96 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_height="match_parent"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:clipChildren="false"
-    >
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/primer_view_vaulted_payment_methods_header"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        >
+        android:orientation="horizontal">
+
         <ImageButton
             android:id="@+id/vaulted_payment_methods_go_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/go_back_description"
-            android:src="@drawable/icon_go_back"
-            android:background="@drawable/icon_button"
-            android:scaleType="fitCenter"
             android:layout_gravity="center"
-            />
+            android:background="@drawable/icon_button"
+            android:contentDescription="@string/go_back_description"
+            android:scaleType="fitCenter"
+            android:src="@drawable/icon_go_back" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="32dp"
-            android:paddingEnd="11dp"
-            >
+            android:layout_weight="1"
+            android:paddingEnd="11dp">
+
             <TextView
                 style="@style/Primer.Text.Title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/other_ways_to_pay"
                 android:layout_weight="1"
-                />
+                android:text="@string/other_ways_to_pay" />
+
             <Button
                 android:id="@+id/edit_vaulted_payment_methods"
                 style="@style/Primer.Button.Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/edit"
                 android:gravity="center_vertical|end"
-                />
+                android:text="@string/edit" />
         </LinearLayout>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/primer_edit_vaulted_payment_methods_header"
-        android:visibility="gone"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
-        >
+        android:orientation="horizontal"
+        android:visibility="gone">
+
         <ImageButton
             android:id="@+id/edit_vaulted_payment_methods_go_back"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:contentDescription="@string/go_back_description"
-            android:src="@drawable/icon_go_back"
-            android:background="@drawable/icon_button"
-            android:scaleType="fitCenter"
             android:layout_gravity="center"
-            />
+            android:background="@drawable/icon_button"
+            android:contentDescription="@string/go_back_description"
+            android:scaleType="fitCenter"
+            android:src="@drawable/icon_go_back" />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_gravity="center_vertical"
             android:layout_marginStart="32dp"
-            android:paddingEnd="11dp"
-            >
+            android:layout_weight="1"
+            android:paddingEnd="11dp">
+
             <TextView
                 style="@style/Primer.Text.Title"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="@string/edit_saved_payment_methods"
                 android:layout_weight="1"
-                />
+                android:text="@string/edit_saved_payment_methods" />
+
             <Button
                 android:id="@+id/edit_vaulted_payment_methods_done"
                 style="@style/Primer.Button.Text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/done"
                 android:gravity="center_vertical|end"
-                />
+                android:text="@string/done" />
         </LinearLayout>
     </LinearLayout>
 
@@ -98,17 +94,15 @@
         android:id="@+id/vaulted_payment_methods_list"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
         android:clipChildren="false"
-        />
+        android:orientation="vertical" />
 
     <Button
-        style="@style/Primer.Button.Text"
         android:id="@+id/vaulted_payment_methods_add_card"
+        style="@style/Primer.Button.Text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/add_card"
         android:layout_marginStart="62dp"
         android:gravity="start|center_vertical"
-        />
+        android:text="@string/add_card" />
 </LinearLayout>
