--- a/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
@@ -85,7 +85,7 @@
 
     <TextView
         android:id="@+id/card_form_error_message"
-        style="@style/Primer.Text.Danger"
+        style="@style/Primer.Text.Small.Danger"
         android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
