Add PayPal billing agreements and orders

--- a/primer-sdk-android/src/main/res/layout/payment_method_button_paypal.xml
+++ b/primer-sdk-android/src/main/res/layout/payment_method_button_paypal.xml
@@ -2,22 +2,20 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_preview_button"
+    android:id="@+id/paypal_preview_button"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/button_light"
+    android:backgroundTint="@color/paypal_gold"
     android:clickable="true"
     android:focusable="true"
     android:gravity="center"
     android:orientation="horizontal">
-
-    <TextView
-        android:id="@+id/card_preview_button_text"
-        style="@style/Primer.Text"
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="@dimen/primer_payment_method_preview_button_height"
-        android:drawablePadding="10dp"
-        android:gravity="center"
-        android:text="@string/pay_by_card"
-        app:drawableStartCompat="@drawable/credit_card_icon" />
+        android:src="@drawable/icon_paypal"
+        android:scaleType="center"
+        android:scaleX="0.65"
+        android:scaleY="0.65"/>
 </LinearLayout>
