--- a/primer-sdk-android/src/main/res/layout/fragment_bottom_sheet.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_bottom_sheet.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:background="@android:color/white">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:id="@+id/checkout_sheet_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,6 +12,6 @@
         android:paddingTop="@dimen/primer_checkout_sheet_padding_vert"
         android:paddingRight="@dimen/primer_checkout_sheet_padding_horiz"
         android:paddingBottom="@dimen/primer_checkout_sheet_padding_vert">
+    </FrameLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.core.widget.NestedScrollView>
