--- a/primer-sdk-android/src/main/res/layout/vaulted_payment_method_card.xml
+++ b/primer-sdk-android/src/main/res/layout/vaulted_payment_method_card.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="6dp"
@@ -33,7 +33,9 @@
             style="@style/Primer.Text.Small"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:ellipsize="end"
+            android:maxLines="1"/>
 
         <Button
             android:id="@+id/item_delete_button"
