--- a/primer-sdk-android/src/main/res/values/colors.xml
+++ b/primer-sdk-android/src/main/res/values/colors.xml
@@ -11,6 +11,5 @@
     <color name="primer_button_primary_fg">@android:color/white</color>
     <color name="primer_button_disabled">#1F000000</color>
 
-    <!-- Card Scanner Things -->
-
+    <color name="paypal_gold">#FFFFC439</color>
 </resources>
