--- a/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_card_form.xml
@@ -86,12 +86,12 @@
     <TextView
         android:id="@+id/card_form_error_message"
         style="@style/Primer.Text.Small.Danger"
-        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:paddingTop="4dp"
         android:paddingBottom="4dp"
-        android:gravity="center" />
+        android:visibility="invisible" />
 
     <LinearLayout
         android:layout_width="match_parent"
