--- a/primer-sdk-android/src/main/res/layout/fragment_success.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_success.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:gravity="center"
-    >
+    android:orientation="vertical">
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/icon_check_circle"
-        android:contentDescription="@string/success_icon_description"
         android:layout_marginBottom="6dp"
-        />
+        android:contentDescription="@string/success_icon_description"
+        android:src="@drawable/icon_check_circle" />
 
     <TextView
         style="@style/Primer.Text.Title"
-        android:text="@string/success_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        />
+        android:text="@string/success_text" />
 
 </LinearLayout>
