--- a/primer-sdk-android/src/main/res/drawable/icon_location_pin.xml
+++ b/primer-sdk-android/src/main/res/drawable/icon_location_pin.xml
@@ -3,7 +3,7 @@
     android:height="25dp"
     android:viewportWidth="24"
     android:viewportHeight="25">
-  <path
-      android:pathData="M12,2.5C8.13,2.5 5,5.63 5,9.5C5,14.75 12,22.5 12,22.5C12,22.5 19,14.75 19,9.5C19,5.63 15.87,2.5 12,2.5ZM12,12C10.62,12 9.5,10.88 9.5,9.5C9.5,8.12 10.62,7 12,7C13.38,7 14.5,8.12 14.5,9.5C14.5,10.88 13.38,12 12,12Z"
-      android:fillColor="#2D50E6"/>
+    <path
+        android:fillColor="#2D50E6"
+        android:pathData="M12,2.5C8.13,2.5 5,5.63 5,9.5C5,14.75 12,22.5 12,22.5C12,22.5 19,14.75 19,9.5C19,5.63 15.87,2.5 12,2.5ZM12,12C10.62,12 9.5,10.88 9.5,9.5C9.5,8.12 10.62,7 12,7C13.38,7 14.5,8.12 14.5,9.5C14.5,10.88 13.38,12 12,12Z" />
 </vector>
