--- a/primer-sdk-android/src/main/res/layout/form_input.xml
+++ b/primer-sdk-android/src/main/res/layout/form_input.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.textfield.TextInputLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    style="@style/Primer.FormInput.Layout"
+<com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/form_input_layout"
+    style="@style/Primer.FormInput.Layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
+
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/form_input_field"
         android:layout_width="match_parent"
@@ -13,6 +12,5 @@
         android:digits="0123456789 "
         android:imeOptions="actionNext"
         android:inputType="number"
-        android:theme="@style/Primer.FormInput.Input"
-        />
+        android:theme="@style/Primer.FormInput.Input" />
 </com.google.android.material.textfield.TextInputLayout>
