--- a/primer-sdk-android/src/main/res/layout/fragment_form_controls.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_form_controls.xml
@@ -1,21 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    style="@style/Widget.AppCompat.Button"
     android:id="@+id/form_button"
-    android:clickable="true"
-    android:focusable="true"
+    style="@style/Widget.AppCompat.Button"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:background="@drawable/button_primary_bg"
-    android:elevation="@dimen/primer_button_elevation"
-    android:paddingStart="@dimen/primer_button_padding_horiz"
-    android:paddingEnd="@dimen/primer_button_padding_horiz"
-    android:layout_marginTop="32dp"
     android:layout_gravity="center_horizontal"
-    >
+    android:layout_marginTop="32dp"
+    android:background="@drawable/button_primary_bg"
+    android:clickable="true"
+    android:elevation="@dimen/primer_button_elevation"
+    android:focusable="true"
+    android:paddingStart="@dimen/primer_button_padding_horiz"
+    android:paddingEnd="@dimen/primer_button_padding_horiz">
 
     <TextView
         android:id="@+id/form_button_txt"
@@ -23,10 +21,9 @@
         android:layout_height="wrap_content"
         android:textColor="@color/primer_button_primary_fg"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ProgressBar
         android:id="@+id/form_button_loading"
@@ -38,6 +35,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/form_button_txt"
-        app:layout_constraintTop_toTopOf="parent"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
