--- a/primer-sdk-android/src/main/res/layout/fragment_form_errors.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_form_errors.xml
@@ -1,14 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fragment_form_errors"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
+    android:layout_height="match_parent">
+
     <TextView
-        style="@style/Primer.Text.Small.Danger"
         android:id="@+id/form_error_text"
+        style="@style/Primer.Text.Small.Danger"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        />
+        android:layout_height="wrap_content" />
 </LinearLayout>
