--- a/primer-sdk-android/src/main/res/layout/fragment_form_title.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_form_title.xml
@@ -1,21 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    >
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+
     <TextView
-        style="@style/Primer.Text.Title"
-        app:layout_constraintTop_toTopOf="parent"
         android:id="@+id/form_title"
+        style="@style/Primer.Text.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
-        style="@style/Primer.Text.Small"
         android:id="@+id/form_title_description"
-        app:layout_constraintTop_toBottomOf="@id/form_title"
+        style="@style/Primer.Text.Small"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        app:layout_constraintTop_toBottomOf="@id/form_title" />
 </androidx.constraintlayout.widget.ConstraintLayout>
