--- a/primer-sdk-android/src/main/res/layout/fragment_form_view.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_form_view.xml
@@ -1,49 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/fragment_direct_debit_form"
+    android:id="@+id/fragment_form_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_direct_debit_title_content"
+        android:id="@+id/fragment_form_view_title"
         android:name="io.primer.android.ui.fragments.FormTitleFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent" />
 
     <LinearLayout
-        android:id="@+id/fragment_direct_debit_form_content"
+        android:id="@+id/fragment_form_view_content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@id/fragment_direct_debit_title_content">
+        app:layout_constraintTop_toBottomOf="@id/fragment_form_view_title">
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragment_direct_debit_form_fields"
+            android:id="@+id/fragment_form_view_fields"
             android:name="io.primer.android.ui.fragments.FormFieldsFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/fragment_direct_debit_form_summary"
+            android:id="@+id/fragment_form_view_summary"
             android:name="io.primer.android.ui.fragments.FormSummaryFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
     </LinearLayout>
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_direct_debit_form_errors"
+        android:id="@+id/fragment_form_view_errors"
         android:name="io.primer.android.ui.fragments.FormErrorFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/fragment_direct_debit_form_content" />
+        app:layout_constraintTop_toBottomOf="@id/fragment_form_view_content" />
 
     <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragment_direct_debit_form_controls"
+        android:id="@+id/fragment_form_view_controls"
         android:name="io.primer.android.ui.fragments.FormControlsFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/fragment_direct_debit_form_errors" />
+        app:layout_constraintTop_toBottomOf="@id/fragment_form_view_errors" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
