Fix input placeholders

--- a/primer-sdk-android/src/main/res/values/dimens.xml
+++ b/primer-sdk-android/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <item name="primer_list_margin" type="dimen">13dp</item>
 
     <!--  Forms  -->
+    <item name="primer_form_title_margin" type="dimen">28dp</item>
     <item name="primer_input_spacing_vert" type="dimen">21dp</item>
     <item name="primer_input_spacing_horiz" type="dimen">28dp</item>
     <item name="primer_button_elevation" type="dimen">2dp</item>
@@ -23,6 +24,8 @@
 
     <!--  Payment methods  -->
     <item name="primer_payment_method_preview_button_height" type="dimen">50dp</item>
+
+
 
     <!--  Card Scanner Things  -->
 
