--- a/primer-sdk-android/src/main/res/layout/fragment_form_title.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_form_title.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/form_title"
         style="@style/Primer.Text.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_marginBottom="@dimen/primer_form_title_margin"/>
 
     <TextView
         android:id="@+id/form_title_description"
-        style="@style/Primer.Text.Small"
+        style="@style/Primer.Text.Large"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/form_title" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        android:layout_marginBottom="@dimen/primer_form_title_margin" />
+
+</LinearLayout>
