--- a/primer-sdk-android/src/main/res/layout/payment_method_button_direct_debit.xml
+++ b/primer-sdk-android/src/main/res/layout/payment_method_button_direct_debit.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<io.primer.android.ui.components.ButtonDefaultLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/direct_debit_preview_button"
     android:layout_width="match_parent"
@@ -19,4 +19,4 @@
         android:gravity="center"
         android:text="@string/add_bank_account"
         app:drawableStartCompat="@drawable/icon_bank" />
-</LinearLayout>
+</io.primer.android.ui.components.ButtonDefaultLayout>
