--- a/primer-sdk-android/src/main/res/layout/form_input.xml
+++ b/primer-sdk-android/src/main/res/layout/form_input.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.textfield.TextInputLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<io.primer.android.ui.components.TextInputWidget xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/form_input_layout"
@@ -14,4 +14,4 @@
         android:layout_height="wrap_content"
         android:imeOptions="actionNext"
         android:theme="@style/Primer.FormInput.Input" />
-</com.google.android.material.textfield.TextInputLayout>
+</io.primer.android.ui.components.TextInputWidget>
