--- a/primer-sdk-android/src/main/res/layout/fragment_form_controls.xml
+++ b/primer-sdk-android/src/main/res/layout/fragment_form_controls.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<io.primer.android.ui.components.ButtonPrimaryLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/form_button"
     style="@style/Widget.AppCompat.Button"
@@ -36,4 +36,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/form_button_txt"
         app:layout_constraintTop_toTopOf="parent" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+</io.primer.android.ui.components.ButtonPrimaryLayout>
