--- a/primer-sdk-android/src/main/res/layout/country_code_input.xml
+++ b/primer-sdk-android/src/main/res/layout/country_code_input.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="wrap_content">
+
     <TextView
         android:id="@+id/country_code_label"
         style="@style/Primer.Text.FormLabelSmall"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="6dp"/>
+        android:layout_marginStart="6dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <com.hbb20.CountryCodePicker
         android:id="@+id/country_code_picker"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/country_code_label"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:ccp_showNameCode="false"
-        app:ccp_showPhoneCode="false"
-        app:ccp_showFullName="true"
-        app:ccp_textGravity="RIGHT"
+        app:ccpDialog_allowSearch="true"
         app:ccpDialog_background="@color/primer_app_background"
         app:ccpDialog_searchEditTextTint="@color/primer_text_color_default"
-        app:ccpDialog_allowSearch="true"
         app:ccpDialog_textColor="@color/primer_text_color_default"
-        />
+        app:ccp_showFullName="true"
+        app:ccp_showNameCode="false"
+        app:ccp_showPhoneCode="false"
+        app:ccp_textGravity="RIGHT"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/country_code_label" />
 </androidx.constraintlayout.widget.ConstraintLayout>
