--- a/primer-sdk-android/src/main/res/layout/form_input.xml
+++ b/primer-sdk-android/src/main/res/layout/form_input.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <io.primer.android.ui.components.TextInputWidget xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/form_input_layout"
     style="@style/Primer.FormInput.Layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/form_input_field"
